# strainmap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  azure-pipelines.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_strainmap.py  setup.cfg  setup.py  strain.mac.spec  strain.spec  strain.windows.spec
.github/workflows/: ci.yml  docs.yml  python-package.yml
ai_trainer/: ai_config.toml  test_ai_trainer.py  unet.py
docs/: gen_ref_nav.py  index.md  mkdocs.yml  requirements_docs.txt
docs/reference/: SUMMARY.md
draft/: data_file.nc  data_file_clean.nc  data_file_clean2.nc  data_file_new.nc  dataset_to_netcdf.py  using_strainmap.nc  ~using_strainmap.nc
examples/: segmentation_script.py
reference/SUMMARY/: index.html
reference/strainmap/: index.html
search/: search_index.json
strainmap/: __init__.py  __main__.py  actions.py  base_classes.py  controller.py  coordinates.py  data_structures.py  defaults.py  entrypoints.py  exceptions.py  main.py  main_window.py  task_base.py  tools.py
strainmap/gui/: __init__.py  animate_beating.py  atlas_view.py  base_classes.py  base_window_and_task.py  data_view.py  figure_actions.py  figure_actions_manager.py  markers_figure.py  plots.py  segmentation_view.py  strain_view.py  velocities_view.py  velocity_view.py  view_dicom_data.py
strainmap/model/: readers.py  strainmap_data_model.py
strainmap/models/: ai_config.toml  ai_segmenter.py  contour_mask.py  contours.py  filters.py  legacy.py  legacy_regenerate.py  propagators.py  quick_segmentation.py  readers.py  segmentation.py  segmentator.py  segmenters.py  sm_data.py  snakes_segmenter.py  strain.py  strainmap_data_model.py  transformations.py  (+3 more)
tests/: _test_segmentation_view.py  conftest.py  test_actions.py  test_ai_segmenter.py  test_animate_beating.py  test_atlas.py  test_base_classes.py  test_base_window_and_task.py  test_contour_mask.py  test_controller.py  test_data_view.py  test_figure_actions.py  test_figure_actions_manager.py  test_legacy.py  test_legacy_regenerate.py  test_main.py  test_propagators.py  test_readers.py  test_segmentation.py  test_segmentation_view.py  test_segmenters.py  test_sm_data.py  test_snakes_segmenter.py  test_strain.py  test_strainmap_data_model.py  test_transformations.py  test_velocities.py  test_velocities_view.py  test_velocity_views.py  test_view_dicom_data.py  test_writers.py
(+1943 files in other folders)
